<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragment.ScanListFragment">

    <item
        android:id="@+id/action_info"
        android:icon="@drawable/ic_action_info"
        android:showAsAction="ifRoom"
        android:title="@string/action_info"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_action_settings"
        android:showAsAction="ifRoom"
        android:title="@string/action_settings"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_scan"
        android:icon="@drawable/ic_connect"
        android:showAsAction="always"
        android:title="@string/action_scan"
        app:showAsAction="always" />
</menu>
