<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewmodel"
            type="com.kstechnologies.nanoscan.fragment.setttingfragment.SettingFragViewModel" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.kstechnologies.nanoscan.fragment.setttingfragment.SettingFragment">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="320dp"
            android:layout_height="180dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            app:cardBackgroundColor="?android:attr/colorBackground"
            app:cardCornerRadius="20dp"
            app:cardElevation="20dp">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/nano" />

            <LinearLayout
                android:layout_width="180dp"
                android:layout_height="150dp"
                android:layout_marginLeft="138dp"
                android:layout_marginTop="25dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal">

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_gravity="center_vertical"
                        app:cardBackgroundColor="@{viewmodel.connected?@color/md_green_300:@color/md_grey_500}"
                        app:cardCornerRadius="15dp"
                        app:cardElevation="0dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="15dp"
                        android:text="@{viewmodel.connected?@string/connected_title:@string/not_connected_title}"
                        android:textColor="?android:attr/textColorPrimary"
                        android:textSize="16sp"
                        tools:text="@string/not_connected_title" />
                </LinearLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_connect_nano"
                    style="@style/CommonButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:text="@{viewmodel.connected?@string/disconnect:@string/connect_to_nano}"
                    tools:text="@string/connect_to_nano" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_nano_status"
                    style="@style/CommonButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="8dp"
                    android:enabled="@{viewmodel.connected}"
                    android:text="@string/device_status"
                    tools:enabled="false" />

            </LinearLayout>

            <com.kstechnologies.nanoscan.widget.CustomLoadingView
                android:id="@+id/loading"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </com.google.android.material.card.MaterialCardView>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:backgroundTint="?android:attr/colorBackground">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="348dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="22dp"
                        android:layout_height="22dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="16dp"
                        android:src="@drawable/ic_highlight_24dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="26dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="35dp"
                        android:gravity="center_vertical"
                        android:text="@string/temperature"
                        android:textColor="?android:attr/textColorPrimary"
                        android:textSize="16sp" />

                    <ToggleButton
                        style="@style/CommonButton"
                        android:layout_width="wrap_content"
                        android:layout_height="35dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="100dp"
                        android:textOff="@string/temp_label_f"
                        android:textOn="@string/temp_label_c"
                        android:textSize="14sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_language"
                    android:layout_width="348dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="22dp"
                        android:layout_height="22dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="16dp"
                        android:src="@drawable/ic_language_black_24dp" />

                    <TextView
                        android:layout_width="200dp"
                        android:layout_height="26dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="35dp"
                        android:gravity="center_vertical"
                        android:text="@string/language"
                        android:textColor="?android:attr/textColorPrimary"
                        android:textSize="16sp" />

                    <ImageView
                        android:layout_width="22dp"
                        android:layout_height="22dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="30dp"
                        android:src="@drawable/ic_keyboard_arrow_right_24dp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_more_info"
                    android:layout_width="348dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="22dp"
                        android:layout_height="22dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="16dp"
                        android:src="@drawable/ic_info_outline_24dp" />

                    <TextView
                        android:layout_width="200dp"
                        android:layout_height="26dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="35dp"
                        android:gravity="center_vertical"
                        android:text="@string/title_activity_info"
                        android:textColor="?android:attr/textColorPrimary"
                        android:textSize="16sp" />

                    <ImageView
                        android:layout_width="22dp"
                        android:layout_height="22dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="30dp"
                        android:src="@drawable/ic_keyboard_arrow_right_24dp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_about"
                    android:layout_width="348dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="22dp"
                        android:layout_height="22dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="16dp"
                        android:src="@drawable/ic_info_outline_24dp" />

                    <TextView
                        android:layout_width="200dp"
                        android:layout_height="26dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="35dp"
                        android:gravity="center_vertical"
                        android:text="@string/title_about"
                        android:textColor="?android:attr/textColorPrimary"
                        android:textSize="16sp" />

                    <ImageView
                        android:layout_width="22dp"
                        android:layout_height="22dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="30dp"
                        android:src="@drawable/ic_keyboard_arrow_right_24dp" />

                </LinearLayout>


            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </LinearLayout>
</layout>

