<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="vm"
            type="com.kstechnologies.nanoscan.activity.newscanactivity.NewScanActivityViewModel" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.kstechnologies.nanoscan.activity.newscanactivity.NewScanActivity">

        <include
            android:id="@+id/include_toolbar"
            layout="@layout/toolbar" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/dip8"
            android:layout_marginEnd="@dimen/dip8"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tb_newScan_charts"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <androidx.viewpager.widget.ViewPager
                    android:id="@+id/viewpager"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>

        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/rl_graph_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/dip8"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/dip8">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_scan"
                style="@style/CommonButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="@dimen/dip8"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@={vm.scanBtnText}"
                android:textSize="16sp"
                app:cornerRadius="6dp" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@id/btn_scan">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:id="@+id/ll_prefix"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusableInTouchMode="true">

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prefix"
                            android:textColorHint="@color/secondary_text"
                            app:hintTextAppearance="@style/TextAppearance.AppCompat.Body1">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/et_prefix"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:ems="4"
                                android:singleLine="true"
                                android:text="@={vm.fileNamePrefix}" />
                        </com.google.android.material.textfield.TextInputLayout>

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/px1"
                        android:layout_below="@id/ll_prefix"
                        android:background="@color/gray" />

                    <LinearLayout
                        android:id="@+id/ll_sd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/ll_prefix">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/save_to_sd"
                            android:textAppearance="?android:textAppearanceMedium"
                            android:textColor="?android:attr/textColorPrimary" />

                        <ToggleButton
                            android:id="@+id/btn_saveSD"
                            style="@style/CommonButton"
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/dip40"
                            android:checked="@={vm.save2SDCard}"
                            android:textOff="No"
                            android:textOn="Yes" />

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/px1"
                        android:layout_below="@id/ll_sd"
                        android:background="@color/gray" />

                    <LinearLayout
                        android:id="@+id/ll_os"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/ll_sd">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/save_to_android"
                            android:textAppearance="?android:textAppearanceMedium"
                            android:textColor="?android:attr/textColorPrimary" />

                        <ToggleButton
                            android:id="@+id/btn_saveOS"
                            style="@style/CommonButton"
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/dip40"
                            android:checked="@={vm.save2Phone}"
                            android:textOff="No"
                            android:textOn="Yes" />

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/px1"
                        android:layout_below="@id/ll_os"
                        android:background="@color/gray" />

                    <LinearLayout
                        android:id="@+id/ll_continuous"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dip40"
                        android:layout_below="@id/ll_os">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/cont_scan"
                            android:textAppearance="?android:textAppearanceMedium"
                            android:textColor="?android:attr/textColorPrimary" />

                        <ToggleButton
                            android:id="@+id/btn_continuous"
                            style="@style/CommonButton"
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/dip40"
                            android:checked="@={vm.continueScan}"
                            android:textOff="No"
                            android:textOn="Yes" />

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/px1"
                        android:layout_below="@id/ll_continuous"
                        android:background="@color/gray" />

                    <LinearLayout
                        android:id="@+id/ll_conf"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/ll_continuous"
                        android:gravity="center"
                        android:minHeight="@dimen/dip40">

                        <TextView
                            android:id="@+id/tv_conf"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/scan_conf"
                            android:textAppearance="?android:textAppearanceMedium"
                            android:textColor="?android:attr/textColorPrimary" />

                        <TextView
                            android:id="@+id/tv_scan_conf"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@{vm.scanConfig}"
                            android:textAppearance="?android:textAppearanceMedium"
                            tools:text="@string/col_1" />

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/px1"
                        android:layout_below="@id/ll_conf"
                        android:background="@color/gray" />
                </RelativeLayout>
            </ScrollView>
        </RelativeLayout>

    </LinearLayout>
</layout>

